# MQH

./: CMakeLists.txt
include/MQH/: mqh.h
src/: mqh.cpp
